--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jp-atlas",
   "version": "0.0.2",
-  "description": "A simple script to generate TopoJSON files from MILT of Japan.",
+  "description": "A simple script to generate TopoJSON files from MLIT of Japan.",
   "main": "build.sh",
   "dependencies": {
     "@mapbox/geojson-merge": "^1.0.2",
